--- a/index.html
+++ b/index.html
@@ -1,40 +1,94 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PokéAPI</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PokéAPI</title>
 
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
-  <body>
-    <div class="position-fixed-top position-fixed header">
-      <header class="bg-dark text-center headerStyle">
-        <h1>Pokemon API by @christianvegag</h1>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
+  <link rel="shortcut icon" href="./assets/img/pokeicon.png" />
+
+  <!-- Font awesome -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/stylecards.css" />
+</head>
+
+<body>
+  <header class="main-header position-fixed w-100">
+    <nav id="navbar" class="navbar main-nav navbar-expand-sm fixed-top py-3">
+      <div class="container">
+        <a href="" class="navbar-brand text-uppercase"><img src="./assets/img/logopoke.png"
+            height="50" /> </a>
+        <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
+          class="navbar-toggler navbar-toggler-icon">
+          <i class="fa fa-bars"></i>
+        </button>
+
+
+       
+
+        <div id="navbarNavDropdown" class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-auto">
+
+            <!-- Paginacion -->
+            <div class="container">
+              <ul id="pagination" class="pagination justify-content-center"></ul>
+           </div>
+           &nbsp;
+           <!-- Header -->
+           <li class="nav-menu-divider"></li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Portafolio</a>
+            </li>
+            <li class="nav-menu-divider"></li>
+            <li class="nav-item">
+              <a class="nav-link" href=""><i class="fa fa-facebook-square"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href=""><i class="fa fa-instagram"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/christianvegag" target="_blank"><i class="fa fa-github"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- <div class="position-fixed-top position-fixed header">
         <ul id="pagination" class="pagination justify-content-center"></ul>
-      </header>
-    </div>
+    </div> -->
 
+  <section>
     <div class="container position-relative">
-      <div
-        id="characters"
-        class="row position-absolute row-cols-1 row-cols-md-4 g-4 characters"
-      ></div>
+      <div id="characters" class="row position-absolute row-cols-1 row-cols-md-4 g-4 characters"></div>
     </div>
+  </section>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+  <footer >
+    <div class="footer text-center">
+      Copyright © 2022 All rights reserved by <a href="https://github.com/christianvegag" class="text-decoration-none text-white" target="_blank">@christianvegag</a> </>
+    </div>
+  </footer>
 
-    <!-- <script src="./assets/js/api.js"></script> -->
-    <script src="./assets/js/api.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+  <!-- jquery-->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+
+  <!-- <script src="./assets/js/api.js"></script> -->
+  <script src="./assets/js/api.js"></script>
+  <script src="./assets/js/script.js"></script>
+</body>
+
 </html>
