--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <footer >
     <div class="footer text-center">
-      Copyright © 2022 All rights reserved by <a href="https://github.com/christianvegag" class="text-decoration-none text-white" target="_blank">@christianvegag</a> </>
+      Copyright © 2022 All rights reserved by <a href="https://github.com/christianvegag" class="text-decoration-none text-info" target="_blank">@christianvegag</a> </>
     </div>
   </footer>
 
